Set compiler source,target and java version